Fixed Safari grid bug
images on the homepage were stretched vertically

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,8 +9,8 @@
 	--clr-light-gray: #f7fafc;
 	--clr-light-gray-rgb: 247, 250, 252;
 	--clr-gray: #dae8f1;
-	--font-body: "Lato", sans-serif;
-	--font-mono: "Roboto mono", monospace;
+	--font-body: 'Lato', sans-serif;
+	--font-mono: 'Roboto mono', monospace;
 }
 
 /* CSS Reset */
@@ -311,7 +311,7 @@ header {
 
 .nav-toggle-label span::before,
 .nav-toggle-label span::after {
-	content: "";
+	content: '';
 	position: absolute;
 }
 
@@ -459,7 +459,11 @@ textarea {
 		grid-template-columns: 1fr 1fr;
 	}
 
-	.article-snippet img {
+	.article-img-wrapper {
+		display: flex;
+	}
+
+	.article-img {
 		height: 100%;
 		object-fit: cover;
 	}
